# FairVote-AI

./: .gitattributes  .gitignore  EVIDENCE_INDEX.md  EXAMINER_RUN_GUIDE.md  LICENSE  Makefile  QUICKSTART_WINDOWS.md  README.md  SOURCE_TREE_SHA256.txt  SOURCE_TREE_SHA256SUMS.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.lock.txt
.github/workflows/: tests.yml
app/: streamlit_app.py
app/controllers/: __init__.py  upload_controller.py
app/data/: README.md  demo_poll_sanitized.csv  poll_no_bias_eps1_n5000_20260126T222552.csv  poll_nonresponse_eps1_n5000_20260126T222832.csv  poll_shy_privacy_helps_eps0.5_n5000_20260126T222748.csv  population.csv
app/parsing/: upload.py
app/plotting/: charts.py
app/services/: category.py  exports.py  inference.py  metrics.py  runs.py  scenario.py  upload_analysis.py
app/ui/: about.py  recommendations.py  runs.py  scenario.py  upload.py  upload_view.py
docs/: README.md  ai_component.md  ambition_and_contribution.md  api_reference.md  architecture.md  consistency_audit.md  dashboard_architecture.md  dashboard_manual_test.md  design_decisions.md  ethics_and_privacy.md  evidence_interpretation.md  experiment_pipeline_architecture.md  experiment_protocol.md  mrp_canonical.md  neural_rr_mrp_diagnostics.md  privacy_boundary.md  problem_definition_and_background.md  project_plan.md  reproducibility_status.md  reproducible_environment.md  reproducing_experiments.md  requirements.md  requirements_traceability.md  research_contribution.md  respondent_manual_test.md  respondent_privacy_testing.md  risk_register.md  test_plan.md  testing_plan.md  theory_validation.md
evidence/ci/: local_verification_summary.md
evidence/final/: README.md
evidence/final/2026-05-05_182242_mrp_vs_baselines/: CLAIM_TO_EVIDENCE_INDEX.md  FINAL_RESULTS.md  ablations.csv  environment.json  fairvote_ai_results.md  paired_comparisons.csv  raw_trials.csv  sha256sums.txt
evidence/final/2026-05-05_182242_mrp_vs_baselines/BUNDLE/: README.md  README_BUNDLE.md  config.json  manifest.json  runtime_profile.csv  sha256sums.txt  summary_with_ci.csv
evidence/final/2026-05-05_182638_mrp_vs_baselines/: CLAIM_TO_EVIDENCE_INDEX.md  FINAL_RESULTS.md  README.md  config.json  environment.json  fairvote_ai_results.md  manifest.json  runtime_profile.csv  sha256sums.txt
evidence/final/2026-05-05_182638_mrp_vs_baselines/BUNDLE/: README_BUNDLE.md  ablations.csv  (+4 more)
evidence/final/2026-05-06_004647_mrp_vs_baselines/: README.md  ablations.csv  config.json  environment.json  manifest.json  paired_comparisons.csv  raw_trials.csv  runtime_profile.csv  sha256sums.txt  summary.csv
evidence/final/theory/: theory_validation.json  theory_validation.md
evidence/privacy/: README.md  api_rejection_examples.md  browser_network_capture.md  privacy_report_example.json
evidence/smoke/: README.md
evidence/smoke/2026-05-05_175726_mrp_vs_baselines/: README.md  ablations.csv  failures.csv  manifest.json  sha256sums.txt
evidence/smoke/2026-05-06_124039_mrp_vs_baselines/: README.md  ablations.csv  config.json  environment.json  manifest.json  raw_trials.csv  runtime_profile.csv  sha256sums.txt  summary_with_ci.csv
experiments/: __init__.py  add_uncertainty_summaries.py  build_results_bundle.py  evaluate_neural_mrp.py  generate_poll_csv.py  make_report_tables.py  mrp_vs_baselines.py  recommend_from_summary.py  sanity_run.py  sensitivity_analysis.py  summarise_learned_honesty.py  sweep_eps.py  theory_validation.py  write_publication_result.py  write_results_summary_md.py
experiments/legacy/: README.md  add_uncertainty_summaries.py  evaluate_neural_mrp.py  sensitivity_analysis.py  sweep_eps.py
experiments/outputs/final_neural_evidence/: README.md  config.json  method_rankings.csv  neural_comparison.csv  neural_comparison.jsonl  neural_verdict.csv  neural_verdict.json  results_trials.csv  results_trials.jsonl  summary.csv  summary.jsonl
experiments/pipeline/: __init__.py  config.py  context.py  io.py  metrics.py  parsing.py  perturbation.py  plotting.py  presets.py  runner.py  sampling.py  scenarios.py  summary.py
experiments/pipeline/methods/: __init__.py  baselines.py  common.py  hierarchical_mrp.py  linear_mrp.py  misreport.py  neural_mrp.py  registry.py
fairvote/: __init__.py  __main__.py  cli.py  main.py
fairvote/inference/mrp/: __init__.py  design.py  diagnostics.py  hierarchical.py  learned_misreport_rr.py  likelihood.py  linear.py  misreport_rr.py  model.py  neural.py  poststratify.py  rr_mrp_fit.py  rr_neural_mrp.py
fairvote/metrics/: __init__.py  group_metrics.py
fairvote/optimisation/: recommend.py
fairvote/privacy/: __init__.py  estimators.py
fairvote/privacy/mechanisms/: __init__.py  kary_rr.py  laplace_mechanism.py
fairvote/simulation/: __init__.py  bias_models.py  population.py  sampling.py
fixtures/synthetic_with_truth/: poll_no_bias_eps1_n200_20260126T222552.csv  poll_nonresponse_eps1_n200_20260126T222832.csv  poll_shy_privacy_helps_eps0.5_n200_20260126T222748.csv
paper/: fairvote_ai_results.md
respondent/: __init__.py  app_factory.py  config.py  index.html  poll_config.json  privacy.py  server.py  storage.py
respondent/static/: app.js  manifest.json  rr.js  styles.css  sw.js
scripts/: verify_final_evidence.py  verify_lockfile.py  verify_privacy_evidence.py
tests/: _helpers.py  conftest.py  test_bootstrap_ci.py  test_browser_respondent_privacy.py  test_central_dp.py  test_cli_entrypoints.py  test_dashboard_modules.py  test_debias.py  test_evaluate_neural_mrp.py  test_experiment_pipeline.py  test_generate_poll_csv_script.py  test_group_metrics.py  test_hierarchical_mrp.py  test_integration_privacy_dashboard_experiment.py  test_learned_honesty.py  test_mrp_canonical.py  test_mrp_vs_baselines.py  test_new_metrics.py  test_privacy_core.py  test_reproducibility_and_privacy_artifacts.py  test_respondent_client_privacy.py  test_respondent_rr_js.py  test_respondent_server.py  test_rr.py  test_rr_neural_mrp.py  test_rr_properties.py  test_rr_statistical.py  test_streamlit_app_syntax.py  test_theory_validation.py  test_uncertainty_summaries.py
(+14 files in other folders)
